# seju-lite

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile.api  Dockerfile.web  README.contrast-test.md  README.md  README.zh-CN.md  config.docker.json  config.json  docker-compose.yml  main.py  pyproject.toml
src/seju_lite/: __main__.py  main.py
src/seju_lite/agent/: base.py  command_router.py  context.py  context_policy.py  context_utils.py  loop.py  memory.py  orchestrator.py  registry.py  skills.py  subagent.py  workflow_orchestrator.py
src/seju_lite/agent/v2/: README.md  __init__.py  runtime_adapter.py  summarization.py  token_compare.py  types.py
src/seju_lite/agent/v2/context/: __init__.py  assembler.py
src/seju_lite/agent/v2/memory/: __init__.py  store.py
src/seju_lite/agent/v2/middleware/: summarization.py
src/seju_lite/api/: server.py
src/seju_lite/bus/: events.py  queue.py
src/seju_lite/channels/: base.py  discord_bot.py  registry.py  telegram_bot.py  whatsapp_bot.py
src/seju_lite/cli/: commands.py  console.py
src/seju_lite/config/: loader.py  schema.py
src/seju_lite/providers/: base.py  gemini_provider.py  litellm_deepseek_provider.py  openai_compatible.py  registry.py
src/seju_lite/runtime/: app.py  runner.py  scheduler.py  schedules.py  single_instance.py
src/seju_lite/runtime/security/: permission_manager.py
src/seju_lite/session/: manager.py
src/seju_lite/tools/: mcp_client.py  mcp_server.py  message_helper.py  rag.py  rag_mcp_server.py  read_file_tool.py  registry.py  simple_rag_tool.py  spawn_tool.py  time_tool.py  web_tool.py
src/seju_lite/utils/: RAG.md  utils.py
test_context/: README.md  run_provider_usage_compare.py
test_context/cases/extra_long_summary_case/workspace/memory/: HISTORY.md  MEMORY.md
test_context/cases/extra_long_summary_case/workspace/sessions/: summary_session.json
test_context/cases/long_story_case/workspace/memory/: HISTORY.md  MEMORY.md
test_context/cases/long_story_case/workspace/sessions/: story_session.json
test_context/cases/sample_case/workspace/memory/: HISTORY.md  (+1 more)
tests/: bench_locomo.py  test_hallucination.py
web/: package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx  types.ts
web/app/api/chat/: route.ts
web/app/api/schedules/: route.ts
web/app/api/uploads/: route.ts
web/app/components/: chat-panel.tsx  sidebar.tsx
web/components/: theme-provider.tsx
web/components/ui/: dropdown-menu.tsx
workspace/: locomo_smoke.json  sessions.json
workspace/_test/sessions/: discord_test.json
workspace/skills/web_sum/: SKILL.md
workspace/skills/web_sum/references/: checklist.md
(+5 files in other folders)
