[project]
name = "seju-lite"
version = "1.0.0"
description = "A lightweight AI assistant inspired by nanobot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.30,<1.0",
    "python-telegram-bot>=22.0,<23.0",
    "pydantic>=2.8,<3.0",
    "httpx>=0.27,<1.0",
    "orjson>=3.10,<4.0",
    "typer>=0.12,<1.0",
    "rich>=14.0,<15.0",
    "loguru>=0.7,<1.0",
    "python-dotenv>=1.0,<2.0",
    "google-genai>=1.68.0",
    "discord.py>=2.4,<3.0",
    "mcp>=1.0,<2.0",
    "langchain>=1.2.13",
    "langchain-text-splitters>=1.1.1",
    "langchain-community>=0.4.1",
    "bs4>=0.0.2",
    "sentence-transformers>=5.3.0",
    "langchain-huggingface>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "ruff>=0.6,<1.0",
    "mypy>=1.10,<2.0"
]

[project.scripts]
seju-lite = "seju_lite.cli.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.hatch.build.targets.wheel]
packages = ["src/seju_lite"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.15.6",
]
